--- a/kak_j6ulukaart_2022.html
+++ b/kak_j6ulukaart_2022.html
@@ -74,7 +74,7 @@
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Kuressaare Ametikool</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Reet Salumaa</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>2022 jõulukaart</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 talv</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 jaanuar</li>
                             <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
                         </ul>
                     </div>
@@ -87,13 +87,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663811/Koduleht/kustikalender_juuli_al0zkl.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642941416/Koduleht/j6ulukaart_rvwglx.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663809/Koduleht/kustikalender_oktoober_cotwo1.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642943711/Koduleht/j6ulukaart3_wjnsjg.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641733105/Koduleht/kalender_12_kuud_tsxjpz.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642943706/Koduleht/j6ulukaart2_btutra.jpg" class="w-100" alt=""/>
                     </div>
                    
                 </div>
@@ -239,7 +239,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
                             <a href="koolitusmajakas.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Koolitusmajakas
+                                *
                             </a>
                         </div>
                     </div>
@@ -251,7 +251,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
                             <a href="piktogrammid.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Piktokrammid
+                                *
                             </a>
                         </div>
                     </div>
