--- a/noorsootoo_keskuse_logo.html
+++ b/noorsootoo_keskuse_logo.html
@@ -68,15 +68,15 @@
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
                         <p>Ülesanne oli kujundada Saaremaa Noorsootöö Keskusele logo. Sihtrühmaks on 8-26 aastased noored, kes käivad keskuses
                         vabaaega veetmas. Minu kujundatud logo sümboliseerib rõõmu, noorust, mitmekülgsust, nutikust, avatust, koostööd.
-                        Ispiratsiooni logo kujundamisel sain erinevatest kontruktoritest, kus on vaja nii töökust, nutikust kui ka koostöö
-                        oskust, et erinevaid osasid ja detaile kokku panna ning neid samu oskusi on vaja ka noortel igapäeva elus.</p>
+                        Ispiratsiooni logo kujundamisel sain erinevatest konstruktoritest, kus on vaja nii töökust, nutikust kui ka koostöö
+                        oskust, et erinevaid osasid ja detaile kokku panna ning neid samu oskusi on vaja ka noortel igapäevaelus.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Saaremaa Noorsootöö Keskus</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Reet Salumaa</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Logo kujundamine</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2021 sügis</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2021 oktoober</li>
                             <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
                         </ul>
                     </div>
@@ -89,13 +89,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663811/Koduleht/kustikalender_juuli_al0zkl.jpg" class="w-100" alt=""/>
+                        <img  src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642942719/Koduleht/noortekeskus_logo900x900_q14j12.jpg" class="w-100" alt=""/>
                     </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663809/Koduleht/kustikalender_oktoober_cotwo1.jpg" class="w-100" alt=""/>
-                    </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641733105/Koduleht/kalender_12_kuud_tsxjpz.jpg" class="w-100" alt=""/>
                     </div>
                    
                 </div>
@@ -241,7 +236,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
                             <a href="koolitusmajakas.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Koolitusmajakas
+                               *
                             </a>
                         </div>
                     </div>
@@ -250,10 +245,10 @@
                     </div> -->
                     <div class="w-45 text-end">
                         <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
+                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt </span>
                             <a href="piktogrammid.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Piktokrammid
+                                *
                             </a>
                         </div>
                     </div>
