--- a/deco_cut.html
+++ b/deco_cut.html
@@ -88,13 +88,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663811/Koduleht/kustikalender_juuli_al0zkl.jpg" class="w-100" alt=""/>
-                    </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663809/Koduleht/kustikalender_oktoober_cotwo1.jpg" class="w-100" alt=""/>
-                    </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641733105/Koduleht/kalender_12_kuud_tsxjpz.jpg" class="w-100" alt=""/>
+                        <video autoplay loop height-50px src="https://res.cloudinary.com/dxxjplpwo/video/upload/v1642875493/Koduleht/Screen_Recording_2022-01-11_at_09.39.01_zvfb1o.mov" class="w-100" style="height: 600px;" alt=""/>
                     </div>
                    
                 </div>
@@ -240,7 +234,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
                             <a href="koolitusmajakas.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Koolitusmajakas
+                                *
                             </a>
                         </div>
                     </div>
@@ -252,7 +246,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
                             <a href="piktogrammid.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Piktokrammid
+                                *
                             </a>
                         </div>
                     </div>
