--- a/tootefotod_kindad.html
+++ b/tootefotod_kindad.html
@@ -88,17 +88,16 @@
         <section class="wow animate__fadeIn">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663811/Koduleht/kustikalender_juuli_al0zkl.jpg" class="w-100" alt=""/>
+                    <div class="col-4 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/bo_1px_solid_rgb:ededed,e_fade:1000/v1642700089/Koduleht/IMG_0484_hzz79y.jpg" class="w-100" alt=""/>
                     </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663809/Koduleht/kustikalender_oktoober_cotwo1.jpg" class="w-100" alt=""/>
-                    </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641733105/Koduleht/kalender_12_kuud_tsxjpz.jpg" class="w-100" alt=""/>
-                    </div>
-                   
+                    <div class="col-4 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/bo_1px_solid_rgb:ededed,e_fade:1000/v1642700089/Koduleht/IMG_0485_ilxnrn.jpg" class="w-100" alt=""/>
                 </div>
+                <div class="col-4 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/bo_1px_solid_rgb:ededed,e_fade:1000/v1642700089/Koduleht/IMG_0483_ztdaal.jpg" class="w-100"
+                        alt="" />
+            
             </div>
         </section>
         <!-- end gallery section -->
@@ -241,7 +240,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
                             <a href="koolitusmajakas.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Koolitusmajakas
+                                *
                             </a>
                         </div>
                     </div>
@@ -253,7 +252,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
                             <a href="piktogrammid.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Piktokrammid
+                                *
                             </a>
                         </div>
                     </div>
