--- a/syte.html
+++ b/syte.html
@@ -63,10 +63,10 @@
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
                         <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 / 2022 &nbsp;&nbsp;</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Syte koduleht</h1>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top"> Õpilasfirma Syte koduleht</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Minu üheks ülesandeks oli meie õpilasfirmas Syte, luua koduleht. Kodulehel on kuvatud meie kõigi 6 liikme parimad
+                        <p>Minu üheks ülesandeks oli meie õpilasfirmas Syte, luua kodulehe prototüüp ja koduleht. Kodulehel on kuvatud meie kõigi 6 tiimiliikme parimad
                         kujundustööd. Veebilehe olen kirjutanud peamiselt HTML ja CSS programmeerimise keelt kasutades. Koduleht on veel töös
                         ja täineneb päev-päevalt.</p>
                     </div>
@@ -76,7 +76,7 @@
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Anželika Toll</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Õpilasfirmale Syte kodulehe loomine</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 jaanuar</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li>
+                            <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
                         </ul>
                     </div>
                 </div>
@@ -88,14 +88,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663811/Koduleht/kustikalender_juuli_al0zkl.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/bo_1px_solid_rgb:ededed,e_fade:1000/v1642948555/Koduleht/syte_rruqpx.jpg" class="w-100"
+                            alt="" />
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663809/Koduleht/kustikalender_oktoober_cotwo1.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642948163/Koduleht/pototyyp_tucu3k.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641733105/Koduleht/kalender_12_kuud_tsxjpz.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642948163/Koduleht/pototyyp2_jjpcut.jpg" class="w-100" alt=""/>
                     </div>
+                   
                    
                 </div>
             </div>
@@ -240,7 +242,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
                             <a href="koolitusmajakas.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Koolitusmajakas
+                               *
                             </a>
                         </div>
                     </div>
@@ -252,7 +254,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
                             <a href="piktogrammid.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Piktokrammid
+                                *
                             </a>
                         </div>
                     </div>
