--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             <nav class="navbar navbar-default bootsnav bg-transparent navbar-top nav-box-width navbar-transparent-no-sticky">
                 <div class="container-fluid nav-header-container h-100px sm-h-70px">
                     <!-- start header navigation -->
-                    <!-- <div class="col d-none d-md-block text-start ps-0">
+                    <div class="col d-none d-md-block text-start ps-0">
                         <div class="header-social-icon border-none no-padding-left no-margin-left">
-                            <a href="https://www.facebook.com/" title="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://twitter.com/" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://dribbble.com/" title="Dribbble" target="_blank"><i class="fab fa-dribbble"></i></a>                          
+                            <a href="#" title="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a href="#" title="Dribbble" target="_blank"><i class="fab fa-dribbble"></i></a>                          
                         </div>
-                    </div> -->
+                    </div>
                     <!-- start logo -->
                     <div class="col text-md-left pl-0 pl-md-3">
-                        <a class="logo" href="index.html"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296826/Koduleht/1x/logop1.png" data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296825/Koduleht/2x/logo2x.png" class="default" alt="Oliver Juss"></a>
+                        <a class="logo" href="index.html"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg" data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg" class="default" alt="Oliver Juss"></a>
                     </div>
                     <!-- end logo -->
                    
@@ -653,67 +653,46 @@
             </div>
         </section>
         <!-- end portfolio section -->
-<!-- start footer -->
-<footer class="footer-clean padding-five-tb sm-padding-30px-tb">
-    <div class="footer-widget-area padding-40px-bottom sm-padding-30px-bottom">
-        <div class="container">
-            <div class="row justify-content-center">
-                <!-- start logo -->
-                <div
-                    class="col-lg-2 widget text-start text-sm-left text-lg-start md-margin-50px-bottom sm-margin-10px-bottom">
-                    <a class="logo" href="index.html"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/c_scale,w_136/v1641296826/Koduleht/1x/logop1.png" data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/c_scale,w_320/v1641296825/Koduleht/2x/logo2x.png" class="default" alt="Oliver Juss"></a>
-                    <!-- <a href="http://www.themezaa.com" class="d-inline-block"><img class="footer-logo"
-                            src="images/logo.png" data-at2x="images/logo@2x.png" alt=""></a> -->
+        <!-- uus footer -->
+        <!-- start footer -->
+        <footer class="footer-center-logo padding-five-tb sm-padding-30px-tb">
+            <div class="container">
+                <div class="row align-items-center">
+                    <!-- start copyright -->
+                    <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
+                        &COPY; Kõik õigysed kaitstud 2022 <a href="#" target="_blank"
+                            title=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee
+                    </div>
+                    <!-- end copyright -->
+                    <!-- start logo -->
+                    <div class="col-lg-4 col-md-2 text-center sm-margin-10px-bottom">
+                        <a href="index.html"><img class="footer-logo" src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg" data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
+                                alt="Portfolio"></a>
+                    </div>
+                    <!-- end logo -->
+                    <!-- start social media -->
+                    <div class="col-lg-4 col-md-5 text-center">
+                        <span class="alt-font text-small margin-10px-right md-margin-5px-right"> +372 5668 1811</span>
+                        
+                        <div class="social-icon-style-8 d-inline-block align-middle">
+                            <ul class="small-icon mb-0">
+                                <li><a class="facebook" href="#" target="_blank"><i
+                                            class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
+                                <li><a class="twitter" href="#" target="_blank"><i
+                                            class="fab fa-twitter"></i></a></li>
+                                <li><a class="google" href="#" target="_blank"><i
+                                            class="fab fa-google-plus-g"></i></a></li>
+                                <li><a class="instagram" href="#" target="_blank"><i
+                                            class="fab fa-instagram me-0" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- end social media -->
                 </div>
-                <!-- end logo -->
-                <!-- start contact information -->
-                <div class="col-lg-3 col-md-3 col-sm-4 widget sm-margin-10px-bottom">
-                    <div
-                        class="widget-title alt-font text-extra-small text-extra-dark-gray text-uppercase margin-40px-bottom margin-10px-top font-weight-600">
-                        Kontaktid</div>
-                    <div class="text-small line-height-24 w-75 sm-w-100 text-medium-gray">Türisalu, Harjumaa</div>
-                    <div class="text-small line-height-24 text-medium-gray">Email: <a href="mailto:oliver.juss@ametikool.ee"
-                            class="text-medium-gray">oliver.juss@ametikool.ee</a></div>
-                    <div class="text-small line-height-24 text-medium-gray">Phone: +372 5668 1811</div>
-                </div>
-                <!-- end contact information -->
-                <!-- start social media -->
-                <!-- <div class="col-lg-3 col-md-4 col-sm-6 widget sm-margin-30px-bottom">
-                    <div
-                        class="widget-title alt-font text-extra-small text-extra-dark-gray text-uppercase margin-15px-bottom font-weight-600">
-                        On social networks</div>
-                    <ul class="list-unstyled">
-                        <li class="w-50 float-start"><a href="https://www.facebook.com/" target="_blank"
-                                class="text-medium-gray text-small">Facebook</a></li>
-                        <li class="w-50 float-start"><a href="https://www.pinterest.com/" target="_blank"
-                                class="text-medium-gray text-small">Pinterest</a></li>
-                        <li class="w-50 float-start"><a href="https://www.twitter.com/" target="_blank"
-                                class="text-medium-gray text-small">Twitter</a></li>
-                        <li class="w-50 float-start"><a href="https://www.linkedin.com/" target="_blank"
-                                class="text-medium-gray text-small">Linkedin</a></li>
-                        <li class="w-50 float-start"><a href="https://www.dribbble.com/" target="_blank"
-                                class="text-medium-gray text-small">Dribbble</a></li>
-                        <li class="w-50 float-start"><a href="https://www.youtube.com/" target="_blank"
-                                class="text-medium-gray text-small">Youtube</a></li>
-                        <li class="w-50 float-start"><a href="https://www.instagram.com/" target="_blank"
-                                class="text-medium-gray text-small">Instagram</a></li>
-                    </ul>
-                </div> -->
-                <!-- end social media -->
             </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="border-color-extra-light-gray border-top padding-40px-top sm-padding-20px-top">
-            <div class="row">
-                <!-- start copyright -->
-                <div class="col-12 text-small text-center text-medium-gray">&COPY; Kõik õigused kaitstud Jussdesign 2022</div>
-                <!-- end copyright -->
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- end footer -->
+        </footer>
+        <!-- lopp uus footer -->
+
         <!-- start scroll to top -->
         <a class="scroll-top-arrow" href="javascript:void(0);"><i class="ti-arrow-up"></i></a>
         <!-- end scroll to top  -->
