--- a/kak_100_tass.html
+++ b/kak_100_tass.html
@@ -75,7 +75,7 @@
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Valmar Voolaid</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Kruusi ja pakendi kujundus</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2021 jaanuar</li>
-                            <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li>
                         </ul>
                     </div>
                 </div>
