--- a/syte.html
+++ b/syte.html
@@ -76,7 +76,7 @@
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Anželika Toll</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Õpilasfirmale Syte kodulehe loomine</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 jaanuar</li>
-                            <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li>
                         </ul>
                     </div>
                 </div>
