--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle">
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Ametikooli 100
-                                                        tassi pakend</span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Ametikool 100
+                                                        kruusi pakend</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
                                             </div>
@@ -539,7 +539,7 @@
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle">
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Saare Liinid jõulukaart</span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Saarte Liinid jõulukaart</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
                                             </div>
@@ -614,7 +614,7 @@
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle">
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Tootefodo
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Tootefoto
                                                         kindad</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
@@ -660,7 +660,7 @@
                 <div class="row align-items-center">
                     <!-- start copyright -->
                     <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
-                        &COPY; Kõik õigysed kaitstud 2022 <a href="#" target="_blank"
+                        &COPY; Kõik õigused kaitstud 2022 <a href="#" target="_blank"
                             title=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee
                     </div>
                     <!-- end copyright -->
