--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <li class="nav"><a href="javascript:void(0);" data-filter=".logo" class="light-gray-text-link text-very-small">Logo</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".disain" class="light-gray-text-link text-very-small">Disain</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".trükis" class="light-gray-text-link text-very-small">Trükis</a></li>
-                                <li class="nav"><a href="javascript:void(0);" data-filter=".hindamine" class="light-gray-text-link text-very-small">Kooli tööd 2021 / 2022</a></li>
+                            <li class="nav"><a href="javascript:void(0);" data-filter=".hindamine" class="light-gray-text-link text-very-small">Kooli tööd</a></li>
                         </ul>                                                                           
                         <!-- end filter navigation -->
                     </div>
@@ -185,7 +185,7 @@
                             </li>
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
-                            <li class="grid-item grid-item-double trükis disain wow animate__fadeInUp" data-wow-delay="0.4s">
+                            <li class="grid-item grid-item-double trükis disain hindamine wow animate__fadeInUp" data-wow-delay="0.4s">
                                 <a href="van_gogh.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641560003/Koduleht/vangoghi_mockup3_900x445_apha1i.jpg" alt=""/></div>
@@ -260,7 +260,7 @@
                             </li>
                             <!-- end portfolio item -->
                             <!-- start  portfolio item -->
-                            <li class="grid-item wow animate__fadeInUp trükis disain" data-wow-delay="0.4s">
+                            <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
                                 <a href="kalender.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641645404/Koduleht/900x900px_kalender_mockup_xoklxz.jpg" alt=""/></div>
